// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: User logged in 1`] = `
<div
  className="hotspot-primary-location display-flex-space-between display-flex-center padded-top padded-bottom big-padded-left big-padded-right hotspot-risk-exposure-HIGH"
>
  <div
    className="text-bold"
  >
    <IssueMessageHighlighting
      message="'3' is a magic number."
    />
  </div>
  <ButtonLink
    className="nowrap big-spacer-left it__hs-add-comment"
    onClick={[MockFunction]}
  >
    hotspots.comment.open
  </ButtonLink>
</div>
`;

exports[`should render correctly: User not logged in  1`] = `
<div
  className="hotspot-primary-location display-flex-space-between display-flex-center padded-top padded-bottom big-padded-left big-padded-right hotspot-risk-exposure-HIGH"
>
  <div
    className="text-bold"
  >
    <IssueMessageHighlighting
      message="'3' is a magic number."
    />
  </div>
</div>
`;
